<resources>
    <string name="app_name">Calculator</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="xTen" translatable="false">×10</string>

    <string name="dots" translatable="false">...</string>
    <string name="sin" translatable="false">sin</string>
    <string name="cos" translatable="false">cos</string>
    <string name="tan" translatable="false">tan</string>
    <string name="abs" translatable="false">||</string>

    <string name="pi" translatable="false">"π"</string>
    <string name="xn" translatable="false">"X\u207F"</string>
    <string name="x2" translatable="false">"X\u00B2"</string>
    <string name="sqrt" translatable="false">√</string>
    <string name="brackets" translatable="false">"( )"</string>

    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="clear" translatable="false">C</string>

    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="multiply" translatable="false">×</string>
    <string name="divide" translatable="false">/</string>

    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>

    <string name="zero" translatable="false">0</string>
    <string name="sign" translatable="false">±</string>
    <string name="comma" translatable="false">,</string>
    <string name="modulo" translatable="false">%</string>
    <string name="equal" translatable="false">=</string>

    <string name="ok">OK</string>

    <string name="error_title">Error</string>
    <string name="error1">Division by zero!</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>

</resources>
